force-app/main/default/objects/HelpTopicResource__c/HelpTopicResource__c.object-meta.xml
<CustomObject>
    <description>Join object relating a Help Resource to a Help Topic, with Usage Notes</description>
    <label>Help Topic Resource</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Help Topic Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Topic Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>