force-app/main/default/objects/HelpTopicResource__c/fields/HelpResource__c.field-meta.xml
<CustomField>
    <fullName>HelpResource__c</fullName>
    <inlineHelpText>The Help Resource accessible from this Help Topic</inlineHelpText>
    <label>Help Resource</label>
    <referenceTo>HelpResource__c</referenceTo>
    <relationshipLabel>Help Topics</relationshipLabel>
    <relationshipName>HelpTopicResources</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>