force-app/main/default/objects/HelpTopicResource__c/fields/HelpTopic__c.field-meta.xml
<CustomField>
    <fullName>HelpTopic__c</fullName>
    <inlineHelpText>The Help Topic accessing this Help Resource</inlineHelpText>
    <label>Help Topic</label>
    <referenceTo>HelpTopic__c</referenceTo>
    <relationshipLabel>Help Resources</relationshipLabel>
    <relationshipName>HelpTopicResources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>