force-app/main/default/objects/HelpTopicResource__c/fields/UsageNotes__c.field-meta.xml
<CustomField>
    <fullName>UsageNotes__c</fullName>
    <inlineHelpText>Usage Notes for this Help Resource and its relevance to this Help Topic - such as a page reference, terminology interpretation...</inlineHelpText>
    <label>Usage Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>